--- a/admin.css
+++ b/admin.css
@@ -6,8 +6,13 @@
 #current-widgets-head #sidebar-info p:last-child,
 #upload-form label,
 .tools-php p.description,
-.options-general-php span.description,
+.tools-php .tool-box > p,
+.options-general-php .description,
 .options-permalink-php form p,
+.export-php .wrap > p,
+.post-body-plain,
 #icon-plugins + h2 + p, #currently-active + form + p, #recent-plugins + p, #inactive-plugins + form + h2 + p + p + p,
-#addcat .form-field p, #addtag .form-field p, .edit-tags-php #col-right .form-wrap, .install-help { display:none; }
-.options-permalink-php form p { display:block; }
+#addcat .form-field p, #addtag .form-field p, .edit-tags-php #col-right .form-wrap, .install-help { display: none; }
+/* Re-show some things that got hidden */
+.tools-php .tool-box p.pressthis,
+.tools-php .tool-box:last-child > p { display: block; }
