* Update to v2.0 * Update hiding of 'Install Plugins' page help text for WP 3.8 * Update hiding of 'Permalink Settings' page help text for WP 3.8 * Minor documentation tweaks * Note compatibility through WP 3.8+ * Update copyright date (2014) * Change donate link * Update screenshot of profile page * Add banner
git-svn-id: https://plugins.svn.wordpress.org/admin-expert-mode/trunk@827089 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin.css
+++ b/admin.css
@@ -8,11 +8,13 @@
 .tools-php p.description,
 .tools-php .tool-box > p,
 .options-general-php .description,
-.options-permalink-php form p,
+.options-permalink-php form p:first-of-type,
 .export-php .wrap > p,
 .post-body-plain,
 #icon-plugins + h2 + p, #currently-active + form + p, #recent-plugins + p, #inactive-plugins + form + h2 + p + p + p,
+.plugin-install-php #wpbody-content .wrap p:first-of-type,
 #addcat .form-field p, #addtag .form-field p, .edit-tags-php #col-right .form-wrap, .install-help { display: none; }
 /* Re-show some things that got hidden */
+.wrap p.submit,
 .tools-php .tool-box p.pressthis,
 .tools-php .tool-box:last-child > p { display: block; }
